@@ -54,15 +54,17 @@ SET(JavaScriptCore_SOURCES
     jit/ExecutableAllocatorPosix.cpp
     jit/ExecutableAllocatorSymbian.cpp
     jit/ExecutableAllocatorWin.cpp
-    jit/JITStubs.cpp
-    jit/JITOpcodes.cpp
-    jit/JITOpcodes32_64.cpp
-    jit/JITPropertyAccess.cpp
-    jit/JITPropertyAccess32_64.cpp
+    jit/JITArithmetic32_64.cpp
     jit/JITArithmetic.cpp
-    jit/JITCall.cpp
     jit/JITCall32_64.cpp
+    jit/JITCall.cpp
     jit/JIT.cpp
+    jit/JITOpcodes32_64.cpp
+    jit/JITOpcodes.cpp
+    jit/JITPropertyAccess32_64.cpp
+    jit/JITPropertyAccess.cpp
+    jit/JITStubs.cpp
+    jit/ThunkGenerators.cpp
 
     parser/JSParser.cpp
     parser/Lexer.cpp
